--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1 id="title-text">Here's my simple Project!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel excepturi ratione dolores fugiat quo libero quisquam, officiis explicabo totam maiores! Minima laborum quod dolor, repellendus ullam optio? Deleniti, autem illo.</p>
 </body>
 </html>
