small change (ptag lorem)

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <body>
     <h1 id="title-text">Here's my simple Project!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel excepturi ratione dolores fugiat quo libero quisquam, officiis explicabo totam maiores! Minima laborum quod dolor, repellendus ullam optio? Deleniti, autem illo.</p>
+    <p>Amet dolore cupiditate reprehenderit nostrum reiciendis facere vel Minima iste rerum a quasi vero Architecto nulla aliquam aliquid fugiat inventore Exercitationem fuga minima consequuntur quis hic Rerum earum doloremque asperiores</p>
 </body>
 </html>
